      ('visualc' folder)
      John Popplewell <john@johnnypops.demon.co.uk>

    * Updated Makefile for easier install.
      Mark K. Kim <tuxNO_SOLICITATIONpaint-dev@cbreak.org>

    * Cleaned up desktop entry file.
      Karl Ove Hufthammer <karl@huftis.org>

    * Made sure KDE icon directories exist before trying to copy files to them.
  
  * Application icon updates:
    -------------------------
    * SVG (Scalable Vector Graphics) icon created.
      Karl Ove Hufthammer <karl@huftis.org>

    * Added 22x22, 64x64, 96x96, 128x128 and 192x192 icons, based on SVG icon.
      Karl Ove Hufthammer <karl@huftis.org>

    * Improved Windows icon, based on SVG icon.
      Karl Ove Hufthammer <karl@huftis.org>

  * Bug fixes:
    ----------
    * Fixed "--noprint=yes" not working under Windows and BeOS.
      Thanks to Adam Moore for pointing out this bug!
      Bill Kendrick & Mark K. Kim

    * Fixed crash bug when translated text ends in a space.
      Mark K. Kim & John Popplewell
  
    * Fixed security issue with permissions to Tux Paint docs directory.
      Mark K. Kim <tuxNO_SOLICITATIONpaint-dev@cbreak.org>

    * Fixed 'savedir' bug.  (Was dropping filenames)

    * Removed redundant '--wheelmouse...' listing from "--usage" output.

    * Fixed crash bug when switching from different tools with scrolling
      collections, and then scrolling.
      Thanks to Kevin Jarrett for the report, and John Popplewell for a
      replicable way of crashing it.

  * Misc. Updates:
    --------------
    * Keywords ("Title" and "Software") now written into PNGs.

    * Changed default UI font to "FreeSans.ttf"
 

2003.Dec.23 (0.9.13)
  * Translated into Basque (eu_ES)
    Juan Irigoien <juanirigoien@irakasle.net>

  * Translated into Norwegian Bokmal (nb_NO)
    Dag H. Loras <dag.loraas@operamail.com>

  * Translated into Tamil (ta_IN)  [buggy]
    Mugunth <mugunth@thamizha.com>

  * Updated Icelandic translation.
    Pjetur G. Hjaltason <pjetur@pjetur.net>
