@@ -1,0 +1,6 @@
+#define arrow_mask_width 16
+#define arrow_mask_height 16
+static unsigned char arrow_mask_bits[] = {
+   0x03, 0x00, 0x07, 0x00, 0x0f, 0x00, 0x1f, 0x00, 0x3f, 0x00, 0x7f, 0x00,
+   0xff, 0x00, 0xff, 0x00, 0x3f, 0x00, 0x3b, 0x00, 0x71, 0x00, 0x70, 0x00,
+   0xe0, 0x00, 0xe0, 0x00, 0xe0, 0x00, 0x00, 0x00 };
