@@ -1,0 +1,6 @@
+#define arrow_width 16
+#define arrow_height 16
+static unsigned char arrow_bits[] = {
+   0x01, 0x00, 0x03, 0x00, 0x07, 0x00, 0x0f, 0x00, 0x1f, 0x00, 0x3f, 0x00,
+   0x7f, 0x00, 0x3f, 0x00, 0x1f, 0x00, 0x33, 0x00, 0x31, 0x00, 0x60, 0x00,
+   0x60, 0x00, 0xe0, 0x00, 0x40, 0x00, 0x00, 0x00 };
