@@ -1,0 +1,6 @@
+#define brush_mask_width 16
+#define brush_mask_height 16
+static unsigned char brush_mask_bits[] = {
+   0x00, 0x10, 0x00, 0x38, 0x00, 0x7c, 0x00, 0x7e, 0x00, 0x3e, 0x00, 0x1f,
+   0x80, 0x0f, 0x80, 0x0f, 0xc0, 0x07, 0xe0, 0x03, 0xf0, 0x01, 0xf0, 0x01,
+   0xfc, 0x01, 0xfe, 0x00, 0x7c, 0x00, 0x38, 0x00 };
