@@ -1,0 +1,6 @@
+#define brush_width 16
+#define brush_height 16
+static unsigned char brush_bits[] = {
+   0x00, 0x00, 0x00, 0x10, 0x00, 0x28, 0x00, 0x24, 0x00, 0x14, 0x00, 0x0a,
+   0x00, 0x05, 0x00, 0x05, 0x80, 0x02, 0xc0, 0x01, 0xa0, 0x00, 0xa0, 0x00,
+   0x90, 0x00, 0x4c, 0x00, 0x38, 0x00, 0x00, 0x00 };
