@@ -1,0 +1,6 @@
+#define crosshair_mask_width 16
+#define crosshair_mask_height 16
+static unsigned char crosshair_mask_bits[] = {
+   0x80, 0x00, 0xc0, 0x01, 0xc0, 0x01, 0xc0, 0x01, 0xc0, 0x01, 0x80, 0x00,
+   0x1e, 0x3c, 0x3f, 0x7e, 0x1e, 0x3c, 0x80, 0x00, 0xc0, 0x01, 0xc0, 0x01,
+   0xc0, 0x01, 0xc0, 0x01, 0x80, 0x00, 0x00, 0x00 };
