@@ -1,0 +1,6 @@
+#define crosshair_width 16
+#define crosshair_height 16
+static unsigned char crosshair_bits[] = {
+   0x00, 0x00, 0x80, 0x00, 0x80, 0x00, 0x80, 0x00, 0x80, 0x00, 0x80, 0x00,
+   0x00, 0x00, 0x3e, 0x3e, 0x00, 0x00, 0x80, 0x00, 0x80, 0x00, 0x80, 0x00,
+   0x80, 0x00, 0x80, 0x00, 0x00, 0x00, 0x00, 0x00 };
