@@ -1,0 +1,6 @@
+#define hand_mask_width 16
+#define hand_mask_height 16
+static unsigned char hand_mask_bits[] = {
+   0x40, 0x00, 0xe0, 0x00, 0xf0, 0x01, 0xf0, 0x01, 0xf0, 0x05, 0xf0, 0x1f,
+   0xf4, 0x3f, 0xfe, 0x7f, 0xff, 0x7f, 0xff, 0x7f, 0xff, 0x7f, 0xfe, 0x3f,
+   0xfc, 0x3f, 0xf8, 0x3f, 0xf0, 0x1f, 0xe0, 0x0f };
