@@ -1,0 +1,6 @@
+#define hand_width 16
+#define hand_height 16
+static unsigned char hand_bits[] = {
+   0x00, 0x00, 0x40, 0x00, 0xa0, 0x00, 0xa0, 0x00, 0xa0, 0x00, 0xa0, 0x05,
+   0xa0, 0x1a, 0xa4, 0x2a, 0x2a, 0x20, 0x12, 0x20, 0x02, 0x20, 0x04, 0x10,
+   0x08, 0x10, 0x10, 0x10, 0xe0, 0x0f, 0x00, 0x00 };
