@@ -1,0 +1,5 @@
+#define insertion_mask_width 8
+#define insertion_mask_height 16
+static unsigned char insertion_mask_bits[] = {
+   0x36, 0x7f, 0x3e, 0x1c, 0x1c, 0x1c, 0x1c, 0x1c, 0x1c, 0x1c, 0x1c, 0x1c,
+   0x1c, 0x3e, 0x7f, 0x36 };
