@@ -1,0 +1,5 @@
+#define insertion_width 8
+#define insertion_height 16
+static unsigned char insertion_bits[] = {
+   0x00, 0x36, 0x08, 0x08, 0x08, 0x08, 0x08, 0x08, 0x08, 0x08, 0x08, 0x08,
+   0x08, 0x08, 0x36, 0x00 };
