@@ -1,0 +1,6 @@
+#define rotate_mask_width 16
+#define rotate_mask_height 16
+static unsigned char rotate_mask_bits[] = {
+   0xc0, 0x01, 0xf0, 0x07, 0xf8, 0x0f, 0x3c, 0x1e, 0x0e, 0x38, 0x0e, 0x38,
+   0x07, 0xf8, 0x07, 0xfc, 0x07, 0xf8, 0x07, 0x70, 0x0e, 0x20, 0x0e, 0x00,
+   0x3c, 0x00, 0xf8, 0x00, 0xf0, 0x01, 0xc0, 0x00 };
