@@ -1,0 +1,6 @@
+#define rotate_width 16
+#define rotate_height 16
+static unsigned char rotate_bits[] = {
+   0x00, 0x00, 0xc0, 0x01, 0x30, 0x06, 0x08, 0x08, 0x04, 0x10, 0x04, 0x10,
+   0x02, 0x20, 0x02, 0xa8, 0x02, 0x70, 0x02, 0x20, 0x04, 0x00, 0x04, 0x00,
+   0x08, 0x00, 0x30, 0x00, 0xc0, 0x00, 0x00, 0x00 };
