@@ -1,0 +1,5 @@
+/* Created with The GIMP */
+#define tiny_mask_width 7
+#define tiny_mask_height 7
+static unsigned char tiny_mask_bits[] = {
+   0x00, 0x08, 0x08, 0x3e, 0x08, 0x08, 0x00 };
