@@ -1,0 +1,6 @@
+#define wand_mask_width 16
+#define wand_mask_height 16
+static unsigned char wand_mask_bits[] = {
+   0x24, 0x00, 0x0d, 0x00, 0x1e, 0x00, 0x3e, 0x00, 0x7c, 0x00, 0xf9, 0x00,
+   0xf0, 0x01, 0xe0, 0x03, 0xc0, 0x07, 0x80, 0x0f, 0x00, 0x1f, 0x00, 0x3e,
+   0x00, 0x7c, 0x00, 0x78, 0x00, 0x30, 0x00, 0x00 };
