@@ -1,0 +1,6 @@
+#define wand_width 16
+#define wand_height 16
+static unsigned char wand_bits[] = {
+   0x24, 0x00, 0x01, 0x00, 0x0c, 0x00, 0x14, 0x00, 0x28, 0x00, 0x71, 0x00,
+   0xe0, 0x00, 0xc0, 0x01, 0x80, 0x03, 0x00, 0x07, 0x00, 0x0e, 0x00, 0x1c,
+   0x00, 0x38, 0x00, 0x30, 0x00, 0x00, 0x00, 0x00 };
