@@ -1,0 +1,6 @@
+#define watch_mask_width 16
+#define watch_mask_height 16
+static unsigned char watch_mask_bits[] = {
+   0xc0, 0x01, 0xe0, 0x03, 0xe0, 0x03, 0xe0, 0x03, 0xf0, 0x07, 0xf8, 0x0f,
+   0xfc, 0x1f, 0xfc, 0x3f, 0xfc, 0x1f, 0xf8, 0x0f, 0xf0, 0x07, 0xe0, 0x03,
+   0xe0, 0x03, 0xe0, 0x03, 0xe0, 0x03, 0xc0, 0x01 };
