@@ -1,0 +1,6 @@
+#define watch_width 16
+#define watch_height 16
+static unsigned char watch_bits[] = {
+   0x00, 0x00, 0xc0, 0x01, 0xc0, 0x01, 0xc0, 0x01, 0x20, 0x02, 0x90, 0x04,
+   0x88, 0x08, 0x88, 0x19, 0x08, 0x08, 0x10, 0x04, 0x20, 0x02, 0xc0, 0x01,
+   0xc0, 0x01, 0xc0, 0x01, 0xc0, 0x01, 0x00, 0x00 };
